--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 *.exe
 *.out
 *.app
+*.ipch
+*.db
+.vs/CodeEngine/v16/Browse.VC.opendb
+.vs/CodeEngine/v16/Browse.VC.db-wal
+.vs/CodeEngine/v16/Browse.VC.db-shm
+.vs/CodeEngine/v16/.suo
