calculated UV array

--- a/CodeEngine.vcxproj
+++ b/CodeEngine.vcxproj
@@ -114,11 +114,11 @@
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\Users\alcal\spine-runtimes\spine-cpp\spine-cpp\include\spine;C:\Users\alcal\Downloads\jsoncons-master\jsoncons-master\include;bin\drivers\include;bin\drivers\include;$(IncludePath)</IncludePath>
     <ExecutablePath>\assets;\assets;$(ExecutablePath)</ExecutablePath>
-    <LibraryPath>bin\drivers\box2d;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\release static\win64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\x64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>\bin\drivers\box2d\bin\Debug;bin\drivers\box2d;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\release static\win64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\x64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>bin\drivers\box2d\bin\Debug;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <LibraryPath>\bin\drivers\box2d\bin\Debug;bin\drivers\box2d\bin\Debug;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <ExecutablePath>\assets;$(VC_ExecutablePath_x64);$(CommonExecutablePath)</ExecutablePath>
     <IncludePath>C:\Users\alcal\spine-runtimes\spine-cpp\spine-cpp\include\spine;C:\Users\alcal\Downloads\jsoncons-master\jsoncons-master\include;bin\drivers\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
