--- a/CodeEngine.vcxproj
+++ b/CodeEngine.vcxproj
@@ -112,15 +112,15 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\alcal\spine-runtimes\spine-cpp\spine-cpp\include\spine;C:\Users\alcal\Downloads\jsoncons-master\jsoncons-master\include;bin\drivers\include;bin\drivers\include;$(IncludePath)</IncludePath>
+    <IncludePath>bin\drivers\box2d\include;C:\Users\alcal\spine-runtimes\spine-cpp\spine-cpp\include\spine;C:\Users\alcal\Downloads\jsoncons-master\jsoncons-master\include;bin\drivers\include;bin\drivers\include;$(IncludePath)</IncludePath>
     <ExecutablePath>\assets;\assets;$(ExecutablePath)</ExecutablePath>
-    <LibraryPath>\bin\drivers\box2d\bin\Debug;bin\drivers\box2d;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\release static\win64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\x64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\alcal\OneDrive\Desktop\code2\bin\drivers\box2d\bin\Debug;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;\bin\drivers\box2d\bin\Debug;bin\drivers\box2d;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\release static\win64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib\x64;C:\MinGW\msys\1.0\home\ManiacalDrWatts\Code.-Engine\bin\drivers\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>\bin\drivers\box2d\bin\Debug;bin\drivers\box2d\bin\Debug;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <LibraryPath>C:\Users\alcal\OneDrive\Desktop\code2\bin\drivers\box2d\bin\Debug;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;\bin\drivers\box2d\bin\Debug;bin\drivers\box2d\bin\Debug;bin\drivers\lib\glfw-3.3.4.bin.WIN64\lib-vc2019;bin\drivers\lib\lib\Release\x64;bin\drivers\lib\release static\win64;bin\drivers\lib\x64;bin\drivers\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <ExecutablePath>\assets;$(VC_ExecutablePath_x64);$(CommonExecutablePath)</ExecutablePath>
-    <IncludePath>C:\Users\alcal\spine-runtimes\spine-cpp\spine-cpp\include\spine;C:\Users\alcal\Downloads\jsoncons-master\jsoncons-master\include;bin\drivers\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>bin\drivers\box2d\include;C:\Users\alcal\spine-runtimes\spine-cpp\spine-cpp\include\spine;C:\Users\alcal\Downloads\jsoncons-master\jsoncons-master\include;bin\drivers\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -156,7 +156,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>bin\render;bin\collisionbin/renderbin\render;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>bin\animation;bin\render;bin\collisionbin/renderbin\render;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -172,7 +172,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>bin\render;bin\collisionbin/render</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>bin\animation;bin\render;bin\collisionbin/render</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
