--- a/CodeEngine.vcxproj
+++ b/CodeEngine.vcxproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bin\collision\collision.hpp" />
+    <ClInclude Include="bin\main.h" />
     <ClInclude Include="bin\render\editor.h" />
     <ClInclude Include="bin\render\imconfig.h" />
     <ClInclude Include="bin\render\imgui.h" />
