--- a/CodeEngine.vcxproj.filters
+++ b/CodeEngine.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClInclude Include="bin\collision\collision.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="bin\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
